--- a/.github/workflows/extras-workflow.yml
+++ b/.github/workflows/extras-workflow.yml
@@ -32,45 +32,46 @@ jobs:
         name: Tidal_Force_Robot_Manual
         path: docs/_build/latex/Burnt_Toaster_Robot_Manual.pdf
 
-  make_dashboard:
-    runs-on: ubuntu-latest
-    name: Build Dashboard
-    steps:
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-        architecture: x64
+  # make_dashboard:
+  #   runs-on: ubuntu-latest
+  #   name: Build Dashboard
+  #   steps:
+  #   - name: Setup Python
+  #     uses: actions/setup-python@v2
+  #     with:
+  #       python-version: '3.8'
+  #       architecture: x64
     
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+  #   - uses: actions/checkout@v2
+  #     with:
+  #       fetch-depth: 0
 
-    - run: sudo apt update
+  #   - run: sudo apt update
 
-    - run: sudo apt install curl
+  #   - run: sudo apt install curl
 
-    - name: Install NPM
-      run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+  #   - name: Install NPM
+  #     run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
 
-    - name: Install requirements
-      run: pip install -r dashboard/requirements.txt
+  #   - name: Install requirements
+  #     run: pip install -r dashboard/requirements.txt
 
-    - run: cd dashboard && make build
+  #   - run: cd dashboard && make build
 
-    - run: cd dashboard && make stage
+  #   - run: cd dashboard && make stage
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Dashboard_Transpiled
-        path: dashboard/_staging
+  #   - uses: actions/upload-artifact@v2
+  #     with:
+  #       name: Dashboard_Transpiled
+  #       path: dashboard/_staging
 
   publish:
     # Only run on tags
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     name: Publish
-    needs: [make_docs, make_dashboard]
+    # needs: [make_docs, make_dashboard]
+    needs: [make_docs]
 
     steps:
     - uses: actions/download-artifact@v2
