--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -1,10 +1,10 @@
 name: Robot Workflow
-on: 
+on:
   push:
     branches:
-     - 'main'
+      - "main"
     tags:
-     - '*'
+      - "*"
   pull_request:
 
 jobs:
@@ -29,14 +29,14 @@ jobs:
       - name: Fail if actions taken
         if: steps.action_black.outputs.is_formatted == 'true'
         run: exit 1
-        
+
       - name: Discord notification
         if: ${{ failure() }}
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: 'Black formatter reported errors in {{ EVENT_PAYLOAD.pull_request.html_url }} !'
+          args: "Black formatter reported errors in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
 
   run_simulator:
     name: Run the WPIlib Simulator
@@ -45,18 +45,17 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
-      
+          python-version: "3.10"
+
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
-        
+
       - id: cache-pipenv
         uses: actions/cache@v1
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-      
 
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
@@ -66,11 +65,11 @@ jobs:
       - name: Timeout the simulator
         run: |
           cd rio && timeout 20 pipenv run python robot.py sim --nogui || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
-      
+
       - name: Discord notification
         if: ${{ failure() }}
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: '@Kode Team Simulator failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !'
+          args: "@Software Team Simulator failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
