--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -10,13 +10,15 @@ drivetrain:
 
   # All pose coordinates are in meters.
   leftMotor:
-    kLeftMotor1Port: 0          # Updated Never by Nobody
-    kLeftMotor2Port: 1          # Updated Never by Nobody
-    kLeftEncoderPorts: [0, 1]   # Updated Never by Nobody
-    kLeftEncoderReversed: False
+    Motor1Port: 0            # Updated Never by Nobody
+    Motor2Port: 1            # Updated Never by Nobody
+    EncoderPorts: [0, 1]     # Updated Never by Nobody
+    EncoderReversed: False   # Updated Never by Nobody
+    Inverted: False          # Updated Never by Nobody
 
   rightMotor:
-    kRightMotor1Port: 2         # Updated Never by Nobody
-    kRightMotor2Port: 3         # Updated Never by Nobody
-    kRightEncoderPorts: [2, 3]  # Updated Never by Nobody
-    kRightEncoderReversed: True
+    Motor1Port: 2            # Updated Never by Nobody
+    Motor2Port: 3            # Updated Never by Nobody
+    EncoderPorts: [2, 3]     # Updated Never by Nobody
+    EncoderReversed: True    # Updated Never by Nobody
+    Inverted: True           # Updated Never by Nobody
