Add pynetworktables as requirement

--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 robotpy = {extras = ["rev", "ctre", "commands2"], version = "*"}
+pynetworktables = "*"
 wpilib = {extras = ["all"], version = "*"}
 pyyaml = "*"
 black = "*"
