--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -10,15 +10,15 @@ drivetrain:
 
   # All pose coordinates are in meters.
   leftMotor:
-    Motor1Port: 1            # Updated Never by Nobody
-    Motor2Port: 2            # Updated Never by Nobody
+    Motor1Port: 1            # Updated 1/8 by Keegan
+    Motor2Port: 2            # Updated 1/8 by Keegan
     EncoderPorts: [0, 1]     # Updated Never by Nobody
     EncoderReversed: False   # Updated Never by Nobody
     Inverted: False          # Updated Never by Nobody
 
   rightMotor:
-    Motor1Port: 3            # Updated Never by Nobody
-    Motor2Port: 4            # Updated Never by Nobody
+    Motor1Port: 3            # Updated 1/8 by Keegan
+    Motor2Port: 4            # Updated 1/8 by Keegan
     EncoderPorts: [2, 3]     # Updated Never by Nobody
     EncoderReversed: True    # Updated Never by Nobody
     Inverted: True           # Updated Never by Nobody
