Replace generic motors with CAN motors (#3)
* Replace generic motors with CAN motors

* Add driver controls into container

* Patch sim failure in teleop

* added shortcuts for newly flashed rios

* Add pynetworktables as requirement

* updating the motor ids

* Clean repo

* Clean pipfile, makefile, gitignore

* Take credit!

* Fix docs

* Running driving code

Co-Authored By: @kenwoodfox

* added the pigeon

* added some more imu stuff and the turnto funcs back

* robot kode now with encoders

* added remaining encoder commands

* added other imu  commands

* I think this is the last of the removed things added back

* added flybywire.py

* Networktables (#7)

* dampening is changed

Co-authored-by: kredcool <kredcool2007@outlook.com>

--- a/rio/constants/robot_controls.yaml
+++ b/rio/constants/robot_controls.yaml
@@ -3,3 +3,13 @@
 
 driver:
   controller_port: 0 # What usb port the driver controller is on
+
+  # Axis
+  ForwardAxis: 1
+  SteerAxis: 2
+
+  # Buttons
+  HalfSpeedButton: 1
+  DiffLock: 2
+  Turn90: 3
+  TurnAnti90: 4
