--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -73,3 +73,39 @@ jobs:
         uses: Ilshidur/action-discord@master
         with:
           args: "@Software Team Simulator failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
+
+  unit_test:
+    name: pyfrc Unit tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pipenv wheel
+
+      - id: cache-pipenv
+        uses: actions/cache@v1
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
+          cd rio && pipenv install --deploy --dev
+
+      - name: Timeout the simulator
+        run: |
+          cd rio && pipenv run python robot.py test || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+
+      - name: Discord notification
+        if: ${{ failure() }}
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        uses: Ilshidur/action-discord@master
+        with:
+          args: "@Software Team Unit tests failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
