--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -9,6 +9,7 @@ wpilib = {extras = ["all"], version = "2023.2.1.0"}
 pyyaml = "6.0"
 black = "*"
 pynetworktables = "*"
+pyntcore = "*"
 
 [dev-packages]
 black = "*"
