--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "parcel build src/index.html && sed -i -e 's/<p><\\\/p>/<script src=\"\\\/networktables\\\/networktables.js\"><\\\/script>/g' dist/index.html",
+    "build": "parcel build src/index.html && sed -i -e 's/<p><\\/p>/<script src=\"\\/networktables\\/networktables.js\"><\\/script>/g' dist/index.html",
     "run": "cd dist && python -m pynetworktables2js",
     "clean": "rm dist/*"
   },
