--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-robotpy = {extras = ["rev", "ctre", "commands2", "navx", "pathplannerlib"], version = "2023.2.1"}
+robotpy = {extras = ["rev", "ctre", "commands2", "navx"], version = "2023.2.1"}
 wpilib = {extras = ["all"], version = "2023.2.1.0"}
 pyyaml = "6.0"
 black = "*"
+robotpy-pathplannerlib = "*"
 
 [dev-packages]
 black = "*"
