--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -1,5 +1,11 @@
 name: Dashboard Workflow
-on: push
+on:
+  push:
+    branches:
+      - "main"
+    tags:
+      - "*"
+  pull_request:
 
 jobs:
   make_dashboard:
@@ -53,13 +59,9 @@ jobs:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     name: Publish
-    needs: [make_docs, make_dashboard]
+    needs: [make_dashboard]
 
     steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: Tidal_Force_Robot_Manual
-
       - uses: actions/download-artifact@v2
         with:
           name: Dashboard_Transpiled
@@ -69,17 +71,6 @@ jobs:
         with:
           files: Dashboard_Transpiled/
           dest: Dashboard_Transpiled.zip
-
-      - name: Upload Docs to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: "*.pdf"
-          tag: ${{ github.ref }}
-          overwrite: true
-          prerelease: true
-          body: "Tidal Force Robotics, Automated with github ci/cd."
-          file_glob: true
 
       - name: Upload Dashboard to release
         uses: svenstaro/upload-release-action@v2
