--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Install NPM
         run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
 
-      - name: Install parcel
-        run: npm install --save-dev parcel
+      - name: Install npm deps
+        run: cd dashboard && npm install
 
       - name: Install pipenv
         run: |
