--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -4,27 +4,27 @@
 # of arms, and similar should go here.
 
 drivetrain:
-  max_velocity: 1.5         # Updated Never by Nobody
-  kGearRatio: 3.5714        # Updated 1/26 by Joe
-  kWheelDiameterInches: 6   # Updated 1/26 by Joe
+  max_velocity: 1.5              # Updated Never by Nobody
+  kGearRatio: 3.5714             # Updated 1/26 by Joe
+  kWheelDiameterMeters: 0.1524   # Updated 1/27 by Joe
 
   # All pose coordinates are in meters.
   leftMotor:
-    Motor1Port: 2            # Updated 1/12 by Keegan
-    Motor2Port: 1            # Updated 1/12 by Keegan 
-    EncoderPorts: [0, 1]     # Updated Never by Nobody
-    EncoderReversed: False   # Updated Never by Nobody
-    Inverted: False          # Updated Never by Nobody
+    Motor1Port: 2                # Updated 1/12 by Keegan
+    Motor2Port: 1                # Updated 1/12 by Keegan 
+    EncoderPorts: [0, 1]         # Updated Never by Nobody
+    EncoderReversed: False       # Updated Never by Nobody
+    Inverted: False              # Updated Never by Nobody
 
   rightMotor:
-    Motor1Port: 3            # Updated 1/8 by Keegan
-    Motor2Port: 4            # Updated 1/8 by Keegan
-    EncoderPorts: [2, 3]     # Updated Never by Nobody
-    EncoderReversed: True    # Updated Never by Nobody
-    Inverted: True           # Updated Never by Nobody
+    Motor1Port: 3                # Updated 1/8 by Keegan
+    Motor2Port: 4                # Updated 1/8 by Keegan
+    EncoderPorts: [2, 3]         # Updated Never by Nobody
+    EncoderReversed: True        # Updated Never by Nobody
+    Inverted: True               # Updated Never by Nobody
 
   navX: # NavX ids
-    can_id: 0                # Updated 1/13 by Keegan
-    yaw: 0                   # Updated 1/13 by Keegan
-    pitch: 0                 # Updated 1/13 by Keegan
-    roll: 0                  # Updated 1/13 by Keegan
+    can_id: 0                    # Updated 1/13 by Keegan
+    yaw: 0                       # Updated 1/13 by Keegan
+    pitch: 0                     # Updated 1/13 by Keegan
+    roll: 0                      # Updated 1/13 by Keegan
