--- a/rio/constants/robot_pid.yaml
+++ b/rio/constants/robot_pid.yaml
@@ -1,10 +1,12 @@
 # Constants for the robot PID
 
 drive:
+  # Diff lock
   kStabilizationP: 0.011
   kStabilizationI: 0.0001
   kStabilizationD: 0
 
+  # TurnToAngle
   kTurnP: 0.007
   kTurnI: 0.006
   kTurnD: 0.001
