added entr to makefile

--- a/dashboard/Makefile
+++ b/dashboard/Makefile
@@ -12,6 +12,7 @@ help:
 	@echo "   run           Shortcut for npm run run"
 	@echo "   clean         Shortucut for git clean -fdX"
 	@echo "   build         Shortucut for npm run build, which builds the javascript dist files"
+	@echo "   dev           Automatically runs build when file changes in src/ (requires 'entr')"
 	@echo "   stage         Prepares dist for deployment to the bot."
 	@echo "   deploy        Use scp to deploy the new html/js files to the nuc."
 	@echo
@@ -21,6 +22,10 @@ build:
 
 run:
 	npm run run
+
+# you need to install entr `paru -S entr` `pamac install entr`
+dev:
+	find src/ | entr sh -c 'make build'
 
 clean:
 	git clean -fdX
