fixed robot position on canvas

--- a/dashboard/Makefile
+++ b/dashboard/Makefile
@@ -40,9 +40,9 @@ stage: build
 	cp entrypoint.sh $(STAGEDIR)
 
 deploy: stage
-	@echo "======================================================================================="
+	@echo "═══════════════════════════════════════════════════════════════════════════════════════"
 	@echo "When prompted for a password, type 'dash' and press enter."
-	@echo "======================================================================================="
+	@echo "═══════════════════════════════════════════════════════════════════════════════════════"
 
 	# Transfer
 	scp -r $(STAGEDIR)/* dash@10.17.21.11:/opt/dashboard
