--- a/dashboard/Makefile
+++ b/dashboard/Makefile
@@ -23,7 +23,7 @@ build:
 	sed -i -e 's/<p><\/p>/<script src="\/networktables\/networktables.js"><\/script><p><\/p>/g' dist/index.html
 	sed -i -e 's/<p><\/p>/<script src="\/networktables\/utils.js"><\/script><p><\/p>/g' dist/index.html
 	sed -i -e 's/<p><\/p>/<script src="\/networktables\/camera.js"><\/script>/g' dist/index.html
-	sed -i -e "s/<p id=\"dash-hash\">[0-9a-fiot]*<\/p>/<p id=\"dash-hash\">$(DASH_HASH)<\/p>/g" dist/index.html
+	sed -i -e "s/idiot-dash-hash/$(DASH_HASH)/g" dist/index.html
 #<p>idiot</p>
 
 run:
