--- a/rio/constants/robot_controls.yaml
+++ b/rio/constants/robot_controls.yaml
@@ -1,16 +1,31 @@
 # This file defines the input
 # and control scheme of the robot.
+# this is orginized into control modes
 
-driver:
-  controller_port: 0 # What usb port the driver controller is on
+main mode:
+  driver: # using a stick controller
+    controller_port: 0 # What usb port the driver controller is on
 
-  # Axis
-  ForwardAxis: 1
-  SteerAxis: 2
+    # Axis
+    ForwardAxis: 1
+    SteerAxis: 2
 
-  # Buttons
-  HalfSpeedButton: 1
-  DiffLock: 2
-  Turn90: 3
-  TurnAnti90: 4
-  grab: 5
+    # Buttons
+    HalfSpeedButton: 1
+    DiffLock: 2
+    Turn90: 3
+    TurnAnti90: 4
+    grab: 5
+
+  operator: # using an "x-box" controller
+    controller_port: 1
+    
+    # Axis
+    VerticalAxis: 0
+    ExtensionAxis: 4
+
+    # Buttons
+    Clamp: 3
+    Unclamp: 1
+    Extend: 4
+    Retract: 2
