--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -11,14 +11,14 @@ drivetrain:
   leftMotor:
     Motor1Port: 2                # Updated 1/12 by Keegan
     Motor2Port: 1                # Updated 1/12 by Keegan 
-    EncoderPorts: [4, 1]         # Updated 2/12 by Keegan
+    EncoderPorts: [2, 1]         # Updated 2/12 by Keegan
     EncoderReversed: False       # Updated Never by Nobody
     Inverted: False              # Updated Never by Nobody
 
   rightMotor:
     Motor1Port: 3                # Updated 1/8 by Keegan
     Motor2Port: 4                # Updated 1/8 by Keegan
-    EncoderPorts: [2, 3]         # Updated Never by Nobody
+    EncoderPorts: [3, 4]         # Updated Never by Nobody
     EncoderReversed: True        # Updated Never by Nobody
     Inverted: True               # Updated Never by Nobody
 
@@ -32,14 +32,12 @@ arm:
   backMotor: # the extension motor
     MotorPort: 5             # Updated 1/22 by Keegan
     Inverted: False          # Updated 1/22 by Keegan
-    EncoderPorts: 5          # Updated 2/11 by Keegan
-    EncoderReversed: False   # Updated 1/22 by Keegan
+    # encoderConversionFactor:
 
   middleMotor: # the screw motor
     MotorPort: 6             # Updated 1/22 by Keegan
     Inverted: False          # Updated 1/22 by Keegan
-    EncoderPorts: 6          # Updated 1/11 by Keegan
-    EncoderReversed: False   # Updated 1/22 by Keegan
+    # encoderConversionFactor:
 
   kWheelDiameterInches: 1    # Updated 1/22 by Keegan
   KEncoderCPR: 1             # Updated 1/22 by Keegan
