Pathplannerlib ramsette example (#12)
* added arm

* added PID values

* 1: why were none of these added before 2: most of these will most likely need to be updated

* the PID values will need to be updated once we get the bot

* its telling me these didn't commit so pushing them here

* This is waiting on a fix from upstream for pathplannerlib?

* Fix all for autonomous

* Tidy container

* This is for setting the conversion factor

* Add new badge to readme

* Fix position converson factor

* fixup! Fix position converson factor

* New manual conversion factor is messy but seems to be working

* Functions on the bot

* Cleanup earlier from today

* Dashboard (#14)

* added initNT, and a test Entry

* added note

* added webpage

* removed dependencies, changed gui

* removed dependencies in rio

* Remove unneded

* Clean dashboard

* Sync pipfile

* Fix black

* added (some) colors

* Cleanup readme a little

* Create entrypoint and makefile for deployment to robot

* added canvas, TODO show robot position

* added distractions

* oooh fancy

* bouncyness on by default

* Import all sounds

* added autonomous selector

* Add countdown alerts

* use parcel globbing to remove bloat

* Use conditional formatting for programmers

* Tidy NT tree

* used `npm ci` instead of `npm install`

* autonomous selector code was in highlightColor() for some reason

* replace colors with ones from color scheme

---------

Co-authored-by: KenwoodFox <kenwood364@gmail.com>
Co-authored-by: KenwoodFox <31870999+KenwoodFox@users.noreply.github.com>

* This is weird, setting the right motors inverted to false fixes the auto spinning but they breaks the drivetrain into spinning

* adding theta

* Modify entrypoint to accept connection direct to rio, change kredcool color

* idk but somethings out of date

* Fix extras

* fixxed it being inverted but this shows another issue of it turning to t

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -72,7 +72,7 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: "@Software Team Simulator failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
+          args: "<@Software Team> Simulator failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
 
   unit_test:
     name: pyfrc Unit tests
@@ -108,4 +108,4 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         uses: Ilshidur/action-discord@master
         with:
-          args: "@Software Team Unit tests failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
+          args: "<@Software Team> Unit tests failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
