--- a/rio/constants/robot_pid.yaml
+++ b/rio/constants/robot_pid.yaml
@@ -1,16 +1,30 @@
 # Constants for the robot PID
 
 drive:
-  kStabilizationP: 1
-  kStabilizationI: 0.5
+  # Diff lock
+  kStabilizationP: 0.011
+  kStabilizationI: 0.0001
   kStabilizationD: 0
 
-  kTurnP: 1
-  kTurnI: 0
-  kTurnD: 0
+  # TurnToAngle
+  kTurnP: 0.007
+  kTurnI: 0.006
+  kTurnD: 0.001
 
   kMaxTurnRateDegPerS: 100
   kMaxTurnAccelerationDegPerSSquared: 300
 
   kTurnToleranceDeg: 5
   kTurnRateToleranceDegPerS: 10 # degrees per second
+
+arm:
+  kp: 0
+  ki: 0
+  kd: 0
+  ff: 0
+
+claw:
+  kp: 0
+  ki: 0
+  kd: 0
+  ff: 0
