this is ONLY FOR WEEK ZERO this will need to be made better later

--- a/rio/constants/robot_controls.yaml
+++ b/rio/constants/robot_controls.yaml
@@ -21,7 +21,8 @@ main mode:
     controller_port: 1
 
     # Buttons
-    Unclamp: 7
+    Unclamp: 1
+    Clamp: 3
     Extend: 4
     Retract: 2
     Up: 6
