--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -4,8 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-robotpy = {extras = ["rev", "ctre", "commands2", "navx"], version = "2023.2.1"}
-wpilib = {extras = ["all"], version = "2023.2.1.0"}
+robotpy = {extras = ["rev", "ctre", "commands2", "navx"]}
+wpilib = {extras = ["all"]}
 pyyaml = "6.0"
 black = "*"
 robotpy-pathplannerlib = "*"
