--- a/rio/constants/robot_pid.yaml
+++ b/rio/constants/robot_pid.yaml
@@ -18,13 +18,14 @@ drive:
   kTurnRateToleranceDegPerS: 10 # degrees per second
 
 arm:
-  kp: 0
-  ki: 0
-  kd: 0
-  ff: 0
+  elevator:
+    kp: 0.1
+    ki: 0.0001
+    kd: 1
+    ff: 0
 
-claw:
-  kp: 0
-  ki: 0
-  kd: 0
-  ff: 0
+  ladder:
+    kp: 0.1
+    ki: 0.0001
+    kd: 1
+    ff: 0
