--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -29,19 +29,17 @@ drivetrain:
     roll: 0                      # Updated 1/13 by Keegan
 
 arm:
-  backMotor: # the extension motor
+  elevatorMotor: # Drives the spool to move the lift in and out
     MotorPort: 5             # Updated 1/22 by Keegan
     Inverted: False          # Updated 1/22 by Keegan
     LimitSwitch: 0           # Updated 2/15 by Keegan TODO Change this
-    # encoderConversionFactor:
+    ConversionFactor: 1      # Updated 1/18 by Joe
 
-  middleMotor: # the screw motor
+  ladderMotor: # Drives the lead screw to run the lift up and down
     MotorPort: 6             # Updated 1/22 by Keegan
     Inverted: False          # Updated 1/22 by Keegan
-    # encoderConversionFactor:
+    ConversionFactor: 1      # Updated 1/18 by Joe
 
-  kWheelDiameterInches: 1    # Updated 1/22 by Keegan
-  KEncoderCPR: 1             # Updated 1/22 by Keegan
 
 
 claw:
