Major refactor after week0 (#26)
* Update images and correct config docs

* Bump BOM

* fix for #25

* switching branches

* week 0 YAY with a func robot

* rope broke

* end no more touching

* fix camera, diff drive viewer

* Remove unused commands

* Segfaults

* Still erroring on button commands

* comment bump

* Refactor arm

* Still broken

* Meter rotations

* Robot needs manual override

* Add manual zero command

* Solid implementation

* Fix for #27

* Fix for #27 (again)

* Bump readme

* You can now drive the robot with WSAD

* Dont trust grep

* Fix one bug in dashboard and make another

* Add arm subsystem and photos to robot manual

* More photos

* New camera photos

* Remove junk

* For some reason line 15 in rio/autonomous/backAuto.py errors out the entire robot code

* still has that prevously mentioned error but is formated better

* make camer bigger, temps smaller

* this will stop the crashing

* make second camera area square

* change picture on error

* it no longer crashes due to better implenentation

* can't fast forward so did it manually

* some debug stuff becuase it is running but isn't moving

* add a manual driving in auto func for the correct amount of time

* this fixes it in auto but breaks it in teleop

* Merging this to main

---------

Co-authored-by: kredcool <kredcool2007@outlook.com>
Co-authored-by: dublUayaychtee <mail@dublu.net>

--- a/rio/constants/robot_controls.yaml
+++ b/rio/constants/robot_controls.yaml
@@ -4,7 +4,7 @@
 
 main mode:
   driver: # using a stick controller
-    controller_port: 1 # What usb port the driver controller is on
+    controller_port: 0 # What usb port the driver controller is on
 
     # Axis
     ForwardAxis: 1
@@ -18,12 +18,14 @@ main mode:
     grab: 5
 
   operator: # using an "x-box" controller
-    controller_port: 0
+    controller_port: 1
 
-    # Buttons
+    # Hold Buttons
     Unclamp: 6
     Clamp: 5
-    Extend: 4
-    Retract: 2
-    Up: 3
-    Down: 1
+    FindZero: 8
+
+    # Presets/Modes
+    LowGoal: 1
+    HighGoal: 4
+    ManualMode: 7
