--- a/rio/constants/robot_controls.yaml
+++ b/rio/constants/robot_controls.yaml
@@ -15,7 +15,7 @@ main mode:
     DiffLock: 2
     Turn90: 3
     TurnAnti90: 4
-    grab: 5
+    StartConfig: 5
 
   operator: # using an "x-box" controller
     controller_port: 1
@@ -24,6 +24,7 @@ main mode:
     Unclamp: 6
     Clamp: 5
     FindZero: 8
+    hold: 3
 
     # Presets/Modes
     LowGoal: 1
