--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -32,13 +32,15 @@ arm:
   elevatorMotor: # Drives the spool to move the lift in and out
     MotorPort: 5                 # Updated 1/22 by Keegan
     Inverted: False              # Updated 1/22 by Keegan
-    LimitSwitch: 0               # Updated 2/15 by Keegan TODO Change this
+    LimitSwitch: 0               # Updated 2/15 by Keegan
     ConversionFactor: 1          # Updated 1/18 by Joe
+    Start: 0                     # Updated 3/18 by Keegan
 
   ladderMotor: # Drives the lead screw to run the lift up and down
     MotorPort: 6             # Updated 1/22 by Keegan
     Inverted: False          # Updated 1/22 by Keegan
     ConversionFactor: 1      # Updated 1/18 by Joe
+    Start: 55                # Updated 3/18 by Keegan
 
 
 
