fixed code I copied because apparently the person I got it from doesn't understand how objects work. also made some changes to the pipfile so it can run cscore as well as cv2-python.

--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-robotpy = {extras = ["rev", "ctre", "commands2", "navx"]}
+robotpy = {extras = ["rev", "ctre", "commands2", "navx", "cscore"]}
 wpilib = {extras = ["all"]}
 pyyaml = "6.0"
 black = "*"
@@ -14,7 +14,7 @@ robotpy-pathplannerlib = "*"
 black = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.10" 
 
 [pipenv]
 allow_prereleases = true
