neither me nor keegan can figure out how to install opencv onto the rio so no comp glob ¯\_(ツ)_/¯

--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -9,6 +9,7 @@ wpilib = {extras = ["all"]}
 pyyaml = "6.0"
 black = "*"
 robotpy-pathplannerlib = "*"
+opencv-python = "*"
 
 [dev-packages]
 black = "*"
